--- a/package.json
+++ b/package.json
@@ -5,6 +5,15 @@
   "description": "Elysia on Vercel workspace",
   "workspaces": [
     "apps/*"
-  ]
+  ],
+  "scripts": {
+    "dev": "turbo run dev",
+    "build": "turbo run build",
+    "test": "turbo run test"
+  },
+  "devDependencies": {
+    "turbo": "latest"
+  },
+  "packageManager": "bun@1.2.2"
 }
 
