add a shared package

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -4,11 +4,13 @@
   "version": "1.0.50",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "bun run --watch src/index.ts",
-    "build": "bun build ./src/index.ts"
+    "build": "tsc -b",
+    "clean": "rm -rf dist .tsbuildinfo",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@elysia-on-vercel/shared": "workspace:*",
     "elysia": "latest"
   },
   "devDependencies": {
