--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,19 +3,18 @@
     "target": "ES2021",
     "module": "ES2022",
     "moduleResolution": "node",
-    "declaration": true,
-    "declarationMap": true,
-    "composite": true,
-    "outDir": "./dist",
-    "rootDir": "./src",
     "strict": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true,
-    "types": ["bun-types"]
+    "declaration": true,
+    "declarationMap": true,
+    "composite": true
   },
   "references": [
-    { "path": "../../packages/shared" }
+    { "path": "./packages/shared" },
+    { "path": "./apps/api" }
   ],
-  "include": ["src/**/*"]
+  "files": []
 }
+
