--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -12,7 +12,12 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true,
-    "types": ["bun-types"]
+    "types": ["bun-types"],
+    "baseUrl": ".",
+    "paths": {
+      "@elysia-on-vercel/shared": ["../../packages/shared/src/index.ts"],
+      "@elysia-on-vercel/shared/*": ["../../packages/shared/src/*"]
+    }
   },
   "references": [
     { "path": "../../packages/shared" }
