--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -1,18 +1,15 @@
 {
+  "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "target": "ES2021",
-    "module": "ES2022",
-    "moduleResolution": "node",
+    "rootDir": "src",
+    "outDir": "dist",
     "declaration": true,
     "declarationMap": true,
     "composite": true,
-    "outDir": "./dist",
-    "rootDir": "./src",
-    "strict": true,
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "skipLibCheck": true
+    "baseUrl": ".",
+    "paths": {
+      "#*": ["./src/*"]
+    }
   },
-  "include": ["src/**/*"]
+  "include": ["src"]
 }
-
