--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,8 @@
 {
-  "compilerOptions": {
-    "target": "ES2021",
-    "module": "ES2022",
-    "moduleResolution": "node",
-    "strict": true,
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "skipLibCheck": true,
-    "declaration": true,
-    "declarationMap": true,
-    "composite": true
-  },
+  "$schema": "https://json.schemastore.org/tsconfig",
+  "files": [],
   "references": [
     { "path": "./packages/shared" },
     { "path": "./apps/api" }
-  ],
-  "files": []
+  ]
 }
-
