--- a/turbo.json
+++ b/turbo.json
@@ -4,7 +4,7 @@
   "tasks": {
     "build": {
       "dependsOn": ["^build"],
-      "outputs": ["dist/**", ".tsbuildinfo"]
+      "outputs": [".vercel/**", "dist/**"]
     },
     "dev": {
       "cache": false,
