--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "bun run --watch src/index.ts",
     "build": "tsc -b",
+    "vercel-build": "cd ../../ && bunx turbo build --filter=@elysia-on-vercel/api... && vc build",
     "clean": "rm -rf dist .tsbuildinfo",
     "typecheck": "tsc --noEmit"
   },
