--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -6,6 +6,7 @@
     "declaration": true,
     "declarationMap": true,
     "composite": true,
+    "incremental": false,
     "baseUrl": ".",
     "paths": {
       "#*": ["./src/*"]
