--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -6,9 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "bun run --watch src/index.ts",
-    "build": "bun build ./src/index.ts"
+    "build": "tsc -b --force"
   },
   "dependencies": {
+    "@elysia-on-vercel/shared": "workspace:*",
     "elysia": "latest"
   },
   "devDependencies": {
