--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -8,12 +8,11 @@
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "import": "./dist/index.js",
-      "default": "./dist/index.js"
+      "import": "./dist/index.js"
     }
   },
   "scripts": {
-    "build": "tsc -b --force",
+    "build": "tsc -b",
     "dev": "tsc -b --watch"
   },
   "devDependencies": {
