--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -1,18 +1,18 @@
 {
   "compilerOptions": {
     "target": "ES2021",
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
+    "module": "ES2022",
+    "moduleResolution": "bundler",
     "declaration": true,
     "declarationMap": true,
     "composite": true,
     "outDir": "./dist",
     "rootDir": "./src",
+    "tsBuildInfoFile": "./dist/.tsbuildinfo",
     "strict": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-    "skipLibCheck": true,
-    "noEmitOnError": false
+    "skipLibCheck": true
   },
   "include": ["src"]
 }
